--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <link rel="stylesheet" href="style.css">
+<title>Fahru Rizal</title>
 <div class="card">
   <div class="card-back">
     <div class="line-numbers">
