--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <link rel="stylesheet" href="style.css">
+<meta http-equiv="refresh" content="30">
 <title>Fahru Rizal</title>
 <div class="card">
   <div class="card-back">
@@ -17,7 +18,7 @@
       <div class="indent"> <span class="property">title</span><span class="operator">: </span><span class="string">'Full Stack Developer'</span><span>,</span></div>
       <div class="indent"> <span class="property">contact</span><span class="operator">: </span><span>{</span>
         <div class="indent"> <span class="property">github</span><span class="operator">: </span><span class="string">'fhrlrizal'</span><span>,</span></div>
-        <div class="indent"> <span class="property">email</span><span class="operator">: </span><span class="string">'fortexcode@gmail.com'</span><span>,</span></div>
+        <div class="indent"> <span class="property">email</span><span class="operator">: </span><span class="string">'hellorizal4@gmail.com'</span><span>,</span></div>
         <div class="indent"> <span class="property">instagram</span><span class="operator">: </span><span class="string">'fhrlrizal'</span><span>,</span></div>
         <div class="indent"><span class="property">website</span><span class="operator">:</span><span class="string">'fhrlrizal.github.io'</span></div><span>}</span>
       </div><span>}</span></code>
